Fixed process control params not being validated in instance templates
CT_BDEPLOY-708
Change-Id: I0db6262b074bc3c94bb4e50d7101e591fe512bf3